--- a/game/package.json
+++ b/game/package.json
@@ -3,9 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "flash": "^1.1.0",
     "react": "^16.9.0",
+    "react-bootstrap": "^1.0.0-beta.12",
+    "react-bootstrap-components-lib": "0.0.0",
+    "react-bootstrap-lib": "0.0.7",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.1"
+    "react-scripts": "3.1.1",
+    "react-sound": "^1.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
